name:                2dpacking
version:             0.1.0.0
license:             AllRightsReserved
author:              Ozgur Akgun
maintainer:          ozgurakgun@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable demo-2dpacking
  main-is:             Main.hs
  build-depends:       base, minion-hs
  hs-source-dirs:      src
  default-language:    Haskell2010
