name:                2dpacking
version:             0.1.0.0
license:             AllRightsReserved
author:              Ozgur Akgun
maintainer:          ozgurakgun@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable demo-2dpacking
  main-is:             CLI.hs
  build-depends:       base, minion-hs, safe==0.3.9
  hs-source-dirs:      src
  default-language:    Haskell2010

executable demo-2dpacking-server
  main-is:             Server.hs
  build-depends:       base, minion-hs, scotty>=0.9.1, transformers, aeson, safe>=0.3.9, parallel-io
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded
